k8s/staging/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: aidconnect-staging
  labels:
    name: aidconnect-staging
    environment: staging
